--- a/src/assets/styles/fonts.css
+++ b/src/assets/styles/fonts.css
@@ -1,1 +1,1 @@
-@import url('https://fonts.googleapis.com/css2?family=Hammersmith+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Arsenal&family=Hammersmith+One&display=swap');
